--- a/blog/app/views/results/show.html.erb
+++ b/blog/app/views/results/show.html.erb
@@ -1,11 +1,11 @@
 <p>
-  <strong>First Name:</strong>
-  <%= @racer.first_name %>
+  <strong>Place:</strong>
+  <%= @result.first_name %>
 </p>
  
 <p>
   <strong>Last_name:</strong>
-  <%= @racer.last_name %>
+  <%= @result.last_name %>
 </p>
 
-<%= link_to 'Back', racers_path %>
+<%= link_to 'Back', results_path %>
