--- a/blog/app/views/results/edit.html.erb
+++ b/blog/app/views/results/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>New Racer</h1>
+<h1>New Result</h1>
  
 <%= render 'form' %>
  
-<%= link_to 'Back', racers_path %>
+<%= link_to 'Back', results_path %>
