--- a/blog/app/views/results/new.html.erb
+++ b/blog/app/views/results/new.html.erb
@@ -17,13 +17,28 @@
   <% end %>
  
   <p>
-    <%= r.label :First %><br>
-    <%= r.text_field :first_name %>
+    <%= r.label :rank %><br>
+    <%= r.text_field :rank %>
   </p>
- 	
   <p>
-    <%= r.label :Last %><br>
-    <%= r.text_field :last_name %>
+    <%= r.label :bib %><br>
+    <%= r.text_field :bib %>
+  </p>
+  <p>
+    <%= r.label :racer_id %><br>
+    <%= r.text_field :racer_id %>
+  </p>
+  <p>
+    <%= r.label :group %><br>
+    <%= r.text_field :group %>
+  </p>
+  <p>
+    <%= r.label :time %><br>
+    <%= r.text_field :time %>
+  </p>
+  <p>
+    <%= r.label :date %><br>
+    <%= r.text_field :date %>
   </p>
  
   <p>
