--- a/blog/app/views/results/show.html.erb
+++ b/blog/app/views/results/show.html.erb
@@ -1,11 +1,30 @@
 <p>
-  <strong>Place:</strong>
-  <%= @result.first_name %>
+  <strong>Rank:</strong>
+  <%= @result.rank %>
 </p>
  
 <p>
-  <strong>Last_name:</strong>
-  <%= @result.last_name %>
+  <strong>Bib:</strong>
+  <%= @result.bib %>
 </p>
 
+<p>
+  <strong>Racer:</strong>
+  <%= @result.racer_id %>
+</p>
+
+<p>
+  <strong>Group:</strong>
+  <%= @result.group %>
+</p>
+
+<p>
+  <strong>Time:</strong>
+  <%= @result.time %>
+</p>
+
+<p>
+  <strong>Date:</strong>
+  <%= @result.date %>
+</p>
 <%= link_to 'Back', results_path %>
