--- a/blog/app/views/racers/index.html.erb
+++ b/blog/app/views/racers/index.html.erb
@@ -20,4 +20,8 @@ There are <%= @racers.count %> total racers.
   <% end %>
 </table>
 <%= link_to 'New racer', new_racer_path %>
+<br>
+
+<%= link_to 'Racers', racers_path %>
 <%= link_to 'Results', results_path %>
+<%= link_to 'Races', races_path %>
