--- a/blog/app/views/racers/show.html.erb
+++ b/blog/app/views/racers/show.html.erb
@@ -21,9 +21,11 @@
   </p>
  
   <p>
-    <strong>Date:</strong>
-    <%= result.date %>
+    <strong>Race ID:</strong>
+    <%= result.race_id %>
   </p>
 <% end %>
 
-<%= link_to 'Back', racers_path %>
+<%= link_to 'Racers', racers_path %>
+<%= link_to 'Results', results_path %>
+<%= link_to 'Races', races_path %>
