--- a/blog/app/views/results/new.html.erb
+++ b/blog/app/views/results/new.html.erb
@@ -37,8 +37,8 @@
     <%= r.text_field :time %>
   </p>
   <p>
-    <%= r.label :date %><br>
-    <%= r.text_field :date %>
+    <%= r.label :race_id %><br>
+    <%= r.text_field :race_id %>
   </p>
  
   <p>
