--- a/blog/app/views/results/show.html.erb
+++ b/blog/app/views/results/show.html.erb
@@ -24,7 +24,10 @@
 </p>
 
 <p>
-  <strong>Date:</strong>
-  <%= @result.date %>
+  <strong>Race_ID:</strong>
+  <%= @result.race_id %>
 </p>
-<%= link_to 'Back', results_path %>
+
+<%= link_to 'Racers', racers_path %>
+<%= link_to 'Results', results_path %>
+<%= link_to 'Races', races_path %>
