--- a/blog/app/views/results/index.html.erb
+++ b/blog/app/views/results/index.html.erb
@@ -16,10 +16,10 @@ There are <%= @results.count %> total results.
     <tr>
       <td><%= result.rank %></td>
       <td><%= result.bib %></td>
-      <td><%= link_to result.racer.first_name + " " + result.racer.last_name, racer_path(result.racer) %></td>
+      <td><%= Racer.find(result.racer_id).first_name%></td>
       <td><%= result.group %></td>
       <td><%= result.time %></td>
-      <td><%= result.race_id %></td>
+      <td><%= Race.find(result.race_id).date %></td>
       <td><%= link_to 'Show', result_path(result) %></td>
       <td><%= link_to 'Edit', edit_result_path(result) %></td>
       <td><%= link_to 'Destroy', result_path(result),
