Adding compiled twitter bootstrap and changing some views

--- a/blog/app/views/racers/index.html.erb
+++ b/blog/app/views/racers/index.html.erb
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Racers</title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+</head>
 <h1>Racers</h1>
 There are <%= @racers.count %> total racers.
 <br>
@@ -22,3 +29,4 @@ There are <%= @racers.count %> total racers.
 <%= link_to 'Racers', racers_path %>
 <%= link_to 'Results', results_path %>
 <%= link_to 'Races', races_path %>
+</html>
