--- a/blog/app/views/racers/show.html.erb
+++ b/blog/app/views/racers/show.html.erb
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Racers</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  </head>
+
 <p>
   <strong>First Name:</strong>
   <%= @racer.first_name %>
@@ -8,16 +16,12 @@
   <%= @racer.last_name %>
 </p>
 
-<%= @racer.first_name %> has run <%= @racer.results.count %> total races.
-
-<br>
-<br>
 <%= link_to 'Racers', racers_path %>
 <%= link_to 'Results', results_path %>
 <%= link_to 'Races', races_path %>
 <br>
 
-<h2>Results</h2>
+<h3>Results (<%= @racer.results.count %>) </h3>
 <% @racer.results.each do |result| %>
 
   <p>
@@ -28,3 +32,4 @@
 <%= link_to 'Racers', racers_path %>
 <%= link_to 'Results', results_path %>
 <%= link_to 'Races', races_path %>
+</html>
