--- a/blog/app/views/races/index.html.erb
+++ b/blog/app/views/races/index.html.erb
@@ -1,23 +1,36 @@
-<h1>Races</h1>
-There are <%= @races.count %> total races.
-<br>
-<br>
-<table>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Races</title> 
+</head>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Races</a>
+    </li>
+  </ul>
+</nav>
+<body style="padding-top: 60px">
+<table class="table table-hover">
+  <thead>
   <tr>
-    <th>ID</th>
     <th>Date</th>
+    <th>Racer Count</th>
+    <th>Results</th>
   </tr>
- 
-  <% @races.each do |race| %>
+  </thead>
+  <tbody>
+  <% Race.order(:date).reverse.each do |race| %>
     <tr>
-      <td><%= race.id %></td>
       <td><%= race.date %></td>
+      <td><%= race.results.count %></td>
       <td><%= link_to 'Show', race_path(race) %></td>
     </tr>
   <% end %>
+  </tbody>
 </table>
-<%= link_to 'New race', new_race_path %>
-<br>
-<%= link_to 'Racers', racers_path %>
-<%= link_to 'Results', results_path %>
-<%= link_to 'Races', races_path %>
+</body>
+</html>
