--- a/blog/app/views/results/index.html.erb
+++ b/blog/app/views/results/index.html.erb
@@ -1,4 +1,18 @@
-<h1>Results</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Racers</title>
+</head>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Racers</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Races</a>
+    </li>
+  </ul>
+</nav>
 There are <%= @results.count %> total results.
 <br>
 <br>
