Adding race count and PR to racer show view

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,2 +1,87 @@
-<h1>Hello, Rails!</h1>
-<%= link_to 'My Blog', controller: 'articles' %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  	<title>Fog City Run</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap core CSS -->
+    <link href="website/css/bootstrap.css" rel="stylesheet">
+    <!-- Get Font Awesome -->
+    <link rel="stylesheet" href="website/font-awesome-4.0.3/css/font-awesome.css">
+    <script src=”website/js/bootstrap.js”></script>
+    <style>
+	body {
+		padding-top: 10%;
+		background: transparent;
+		font-size: 16px;
+	}
+	html {
+			background: #336699;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
+	/* Override B3 .panel adding a subtly transparent background */
+	.panel {
+		padding-top: 20px;
+		background-color: rgba(255, 255, 255, 0.9);
+	}
+	
+	.navbar {
+    background: rgba(0,0,0,0.5);
+    border: 0px solid transparent;
+  	}
+  	
+	.margin-base-vertical {
+		margin: 40px 0;
+	}
+	</style>
+  </head>
+
+<body>
+    <div class="container">
+    		<div class="row">
+    		<div class="col-md-8 col-md-offset-2 panel panel-default" style="height:50%;">
+    		<div class="text-center">
+    		<h1>Fog City Run</h1>
+    		<p>A weekly running race in San Francisco, CA</p>
+    		<br>
+    		</div>
+    		<p><b><i class="fa fa-calendar"></i>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
+    		<p><b><i class="fa fa-globe"></i>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
+    		<p><b><i class="fa fa-users"></i>&nbsp; How do I register?</b> Registration is upon arrival. $5.00 cash. We usually don't have change.</P>
+                <p><b><i class="fa fa-road"></i>&nbsp; What is the course?</b> A hilly 5km(ish) route through the Marina neighborhood and the Presidio <a href="https://raw.githubusercontent.com/maxmetcalfe/Fog-City-Run/master/website/images/race_map.jpeg">(Map).</a></P>
+    		<p><b><i class="fa fa-bar-chart-o"></i>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to 'here', racers_path %></a> and on Strava <a href=http://www.strava.com/segments/7613369>here.</a></P>
+        <p><i class="fa fa-suitcase"></i><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
+			<br> 
+			</div>
+			</div> <!-- row -->
+        <div class="row">
+        <div class="col-md-12 " style="height:15%;">
+        <p><h6>By beginning, completing, or attempting to complete the Fog City Run, you expressly acknowledge and agree that your athletic activities, including but not limited to running, carry certain inherent and significant risks of property damage, bodily injury or death, and that you voluntarily assume all known and unknown risks associated with these activities even if caused in whole or part by the action, inaction or negligence of the organizers of the Fog City Run or by the action, inaction or negligence of others.</h6></p>
+        <br>
+       <br>
+      </div>
+      </div> <!-- row -->
+
+	</div> <!-- container -->
+	
+	<div class="navbar navbar-default navbar-fixed-bottom">
+    	<div class="container-fluid">
+    		<div class="row">
+          <!--<div class="col-md-0 col-md-offset-5">-->
+            <center>
+    	       <a href="http://facebook.com/FogCityRun"><h4><i class="fa fa-facebook-square" style="color:white"></i> Fog City Run</h4></a>
+           </center>
+          <!--</div>-->
+    		</div> <!--row-->
+    	</div> <!--container-->
+  	</div> <!-- nav bar> -->
+    <!-- /.container -->
+    <!-- Bootstrap core JavaScript-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
