--- a/blog/app/views/racers/index.html.erb
+++ b/blog/app/views/racers/index.html.erb
@@ -5,6 +5,9 @@
 </head>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to "Home", root_path %></a>
+    </li>
     <li class="nav-item active">
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
     </li>
@@ -35,7 +38,4 @@
   </tbody>
 </table>
 </body>
-<%= link_to 'Racers', racers_path %>
-<%= link_to 'Results', results_path %>
-<%= link_to 'Races', races_path %>
 </html>
