--- a/blog/app/views/racers/show.html.erb
+++ b/blog/app/views/racers/show.html.erb
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Racers</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  </head>
-
-<p>
-  <strong>First Name:</strong>
-  <%= @racer.first_name %>
-</p>
- 
-<p>
-  <strong>Last_name:</strong>
-  <%= @racer.last_name %>
-</p>
-
-<%= link_to 'Racers', racers_path %>
-<%= link_to 'Results', results_path %>
-<%= link_to 'Races', races_path %>
-<br>
-
-<h3>Results (<%= @racer.results.count %>) </h3>
-<% @racer.results.each do |result| %>
-
-  <p>
-    <%= Race.find(result.race_id).date %> : <%= result.time %>
-  </p>
-<% end %>
-
-<%= link_to 'Racers', racers_path %>
-<%= link_to 'Results', results_path %>
-<%= link_to 'Races', races_path %>
+<head>
+  <title>Racers</title>
+</head>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <a class="navbar-brand" href="#"><%= @racer.first_name %> <%= @racer.last_name %> (<%= @racer.results.count %>) - <%= @racer.results.order(:time).first.time%></a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Races', races_path %></a>
+    </li>
+  </ul>
+</nav>
+<body style="padding-top: 60px">
+<table class="table table-hover">
+  <thead>
+  <tr>
+    <th>Date</th>
+    <th>Time</th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @racer.results.each do |result| %>
+    <tr>
+      <td><%= Race.find(result.race_id).date %></td>
+      <td><%= result.time %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+</body>
 </html>
