--- a/blog/app/views/races/index.html.erb
+++ b/blog/app/views/races/index.html.erb
@@ -6,6 +6,9 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <ul class="nav navbar-nav">
     <li class="nav-item">
+      <a class="nav-link" <%= link_to "Home", root_path %></a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
     </li>
     <li class="nav-item active">
