--- a/blog/app/views/races/index.html.erb
+++ b/blog/app/views/races/index.html.erb
@@ -17,6 +17,7 @@
   </ul>
 </nav>
 <body style="padding-top: 60px">
+<div class="container-fluid">
 <table class="table table-hover">
   <thead>
   <tr>
@@ -35,5 +36,6 @@
   <% end %>
   </tbody>
 </table>
+</div>
 </body>
 </html>
