--- a/blog/app/views/racers/index.html.erb
+++ b/blog/app/views/racers/index.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Racers</title>
 </head>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse bg-faded navbar-fixed-top">
   <ul class="nav navbar-nav">
     <li class="nav-item">
       <a class="nav-link" <%= link_to "Home", root_path %></a>
@@ -18,7 +18,7 @@
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
   <thead>
   <tr>
     <th>First Name</th>
