--- a/blog/app/views/racers/show.html.erb
+++ b/blog/app/views/racers/show.html.erb
@@ -23,7 +23,7 @@
       <h3> <%= @racer.first_name %> <%= @racer.last_name %>: <%= @racer.results.count %> races, PR = <%= @racer.results.order(:time).first.time%></h3>
     </div>
   </div>
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
   <thead>
   <tr>
     <th>Date</th>
