--- a/blog/app/views/races/index.html.erb
+++ b/blog/app/views/races/index.html.erb
@@ -18,24 +18,28 @@
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-<table class="table table-hover">
-  <thead>
-  <tr>
-    <th>Date</th>
-    <th>Racer Count</th>
-    <th>Results</th>
-  </tr>
-  </thead>
-  <tbody>
-  <% Race.order(:date).reverse.each do |race| %>
-    <tr>
-      <td><%= race.date %></td>
-      <td><%= race.results.count %></td>
-      <td><%= link_to 'Show', race_path(race) %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-</div>
+  <div class="row">
+    <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["black", "#999"]%>
+  </div>
+  <div class="row">
+    <table class="table table-hover table-bordered">
+      <thead>
+      <tr>
+        <th>Date</th>
+        <th>Racer Count</th>
+        <th>Results</th>
+      </tr>
+      </thead>
+      <tbody>
+      <% Race.order(:date).reverse.each do |race| %>
+        <tr>
+          <td><%= race.date %></td>
+          <td><%= race.results.count %></td>
+          <td><%= link_to 'Show', race_path(race) %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
