--- a/blog/app/views/races/show.html.erb
+++ b/blog/app/views/races/show.html.erb
@@ -18,7 +18,7 @@
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
   <thead>
   <tr>
     <th>Rank</th>
