--- a/blog/app/assets/stylesheets/bootstrap.css
+++ b/blog/app/assets/stylesheets/bootstrap.css
@@ -4593,7 +4593,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse {
   background-color: #222;
-  border-color: #080808;
+  border-color: #ffffff;
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
