--- a/blog/app/views/races/index.html.erb
+++ b/blog/app/views/races/index.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>Races</title> 
 </head>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
+  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
       <a class="nav-link" <%= link_to "Home", root_path %></a>
@@ -19,7 +20,7 @@
 <body style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
-    <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["black", "#999"]%>
+    <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["grey"] %>
   </div>
   <div class="row">
     <table class="table table-hover table-bordered">
