--- a/blog/app/views/racers/index.html.erb
+++ b/blog/app/views/racers/index.html.erb
@@ -16,6 +16,16 @@
       <a class="nav-link" <%= link_to 'Races', races_path %></a>
     </li>
   </ul>
+  <form class="navbar-form navbar-left" role="search">
+    <div class="input-group">
+      <%= form_tag(racers_path, :method => "get", id: "search-form") do %>
+        <%= text_field_tag :search, params[:search], placeholder: "Search racers...", class: 'form-control' %>
+        <span class="input-group-btn">
+          <%= submit_tag "Search", class: "btn btn-default" %>
+        </span>
+        <% end %>
+    </div>
+  </form>
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
