Removing the races chart, for now

--- a/blog/app/views/races/index.html.erb
+++ b/blog/app/views/races/index.html.erb
@@ -19,9 +19,9 @@
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-  <div class="row">
+<!--   <div class="row">
     <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["grey"] %>
-  </div>
+  </div> -->
   <div class="row">
     <table class="table table-hover table-bordered">
       <thead>
