Testing local change

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="text-center">
-    <h1>Fog City Run</h1>
+    <h1>Fog City Runsssssssssss</h1>
     <p>A weekly running race in San Francisco, CA</p>
     <p><b><i class="fa fa-calendar"></i>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
     <p><b><i class="fa fa-globe"></i>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
