--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -17,14 +17,16 @@
     </li>
   </ul>
 </nav>
-<body style="padding-top: 60px">
+<body style="padding-top: 40px">
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-5">
-      <h3> <%= @racer.first_name %> <%= @racer.last_name %>: <%= @racer.results.count %> races, PR = <%= @racer.results.order(:time).first.time%></h3>
+      <h3> <%= @racer.first_name %> <%= @racer.last_name %></h3>
+      <h4><i>Races: <%= @racer.results.count %></i></h4>
+      <h4><i>PR: <%= @racer.results.order(:time).first.time%></i></h4>
     </div>
   </div>
-<table class="table table-hover table-bordered">
+  <table class="table table-hover table-bordered">
   <thead>
   <tr>
     <th>Date</th>
