--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,12 +25,12 @@
     <h2>
     <p>A weekly running race in San Francisco, CA</p>
     <br>
-    <p class="text-left"><b><i class="fa fa-calendar"></i>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
-    <p class="text-left"><b><i class="fa fa-globe"></i>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
-    <p class="text-left"><b><i class="fa fa-users"></i>&nbsp; How do I register?</b> Registration is upon arrival. $5.00 cash. We usually don't have change.</P>
-    <p class="text-left"><b><i class="fa fa-road"></i>&nbsp; What is the course?</b> A hilly 5km(ish) route through the Marina and the Presidio <a href="https://raw.githubusercontent.com/maxmetcalfe/Fog-City-Run/master/website/images/race_map.jpeg">(Map).</a></P>
-    <p class="text-left"><b><i class="fa fa-bar-chart-o"></i>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to 'here', races_path %> and on <a href=http://www.strava.com/segments/7613369>Strava.</a></P>
-    <p class="text-left"><i class="fa fa-suitcase"></i><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
+    <p class="text-left"><b>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
+    <p class="text-left"><b>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
+    <p class="text-left"><b>&nbsp; How do I register?</b> Registration is upon arrival. $5.00 cash. We usually don't have change.</P>
+    <p class="text-left"><b>&nbsp; What is the course?</b> A hilly 5km(ish) route through the Marina and the Presidio <a href="https://raw.githubusercontent.com/maxmetcalfe/Fog-City-Run/master/website/images/race_map.jpeg">(Map).</a></P>
+    <p class="text-left"><b>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to 'here', races_path %> and on <a href=http://www.strava.com/segments/7613369>Strava.</a></P>
+    <p class="text-left"><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
     </h2>
   </div> <!-- row -->
     <div class="row">
