--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Races</title> 
+  <link href="../../assets/stylesheets/bootstrap.css" rel="stylesheet">
+  <link href="../../assets/stylesheets/welcome.scss" rel="stylesheet">
 </head>
-<nav class="navbar navbar-default navbar-fixed-top">
+<!-- <nav class="navbar navbar-custom navbar-fixed-top">
   <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
   <ul class="nav navbar-nav">
     <li class="nav-item active">
@@ -16,30 +18,34 @@
       <a class="nav-link" href="#">Races</a>
     </li>
   </ul>
-</nav>
+</nav> -->
 <body style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
     <div class="text-center">
-    <h1>Fog City Run</h1>
-    <h2>
-    <p>A weekly running race in San Francisco, CA</p>
+    <h1><b>Fog City Run</b></h1>
     <br>
-    <p class="text-left"><b>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
-    <p class="text-left"><b>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
-    <p class="text-left"><b>&nbsp; How do I register?</b> Registration is upon arrival. $5.00 cash. We usually don't have change.</P>
-    <p class="text-left"><b>&nbsp; What is the course?</b> A hilly 5km(ish) route through the Marina and the Presidio <a href="https://raw.githubusercontent.com/maxmetcalfe/Fog-City-Run/master/website/images/race_map.jpeg">(Map).</a></P>
-    <p class="text-left"><b>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to 'here', races_path %> and on <a href=http://www.strava.com/segments/7613369>Strava.</a></P>
-    <p class="text-left"><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
-    </h2>
   </div> <!-- row -->
-    <div class="row">
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-      <div class="col-md-12 " style="height:10%;">
-      <p><h6>By beginning, completing, or attempting to complete the Fog City Run, you expressly acknowledge and agree that your athletic activities, including but not limited to running, carry certain inherent and significant risks of property damage, bodily injury or death, and that you voluntarily assume all known and unknown risks associated with these activities even if caused in whole or part by the action, inaction or negligence of the organizers of the Fog City Run or by the action, inaction or negligence of others.</h6></p>
-      </div>
-    </nav>
-  </div> <!-- row -->
+  <div class="row">
+    <div class="col-md-8 col-md-offset-3">
+    <button type="button" class="btn btn-warning btn-lg">Infoss</button>
+    <button type="button" class="btn btn-warning btn-lg">Results</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-5">
+      <form class="navbar-form navbar-left" role="search">
+        <div class="input-group">
+          <%= form_tag(racers_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search results by racer", class: 'form-control' %>
+          <span class="input-group-btn">
+            <%= submit_tag "Search", class: "btn btn-default" %>
+          </span>
+          <% end %>
+        </div>
+      </form>
+    </div>
+  </div>
   </div>
 </div>
 </body>
