--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-	font-size: 100px;
+	font-size: 125px;
 	color: rgb(255,0,0);
 }
 
@@ -18,22 +18,36 @@ h1 {
 }
 
 .btn-lg {
-  padding: 50px 90px;
-  font-size: 60px;
+  padding: 40px 70px;
+  font-size: 30px;
   line-height: 1.3333333;
   border-radius: 50px;
   white-space: normal;
+  margin-bottom: 40px;
 }
 
 .btn-warning {
   color: #ff0000;
   background-color: #ffae00;
   border-color: #ff0000;
-  border: 10px solid;
+  border: 8px solid;
 }
 
 .btn-warning:hover {
   color: #ffae00;
   background-color: #ff0000;
   border-color: #ff0000;
+}
+
+.navbar-form {
+  height: 180px !important;
+  padding: 1px 15px;
+  margin-top: 2px;
+  margin-right: -15px;
+  margin-bottom: 8px;
+  margin-left: -15px;
+  border-top: 10px solid transparent;
+  border-bottom: 1px solid transparent;
+  -webkit-box-shadow: inset 0 0px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
+          box-shadow: inset 0 0px 0 rgba(255, 255, 255, 0), 0 0px 0 rgba(255, 255, 255, 0);
 }
