--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
     </li>
   </ul>
 </nav> -->
-<body style="padding-top: 60px">
+<body style="padding-top: 20px">
 <div class="container-fluid">
   <div class="row">
     <div class="text-center">
@@ -27,9 +27,9 @@
     <br>
   </div> <!-- row -->
   <div class="row">
-    <div class="col-md-8 col-md-offset-3">
-    <button type="button" class="btn btn-warning btn-lg">Infoss</button>
-    <button type="button" class="btn btn-warning btn-lg">Results</button>
+    <div class="col-md-8 col-md-offset-2" style="text-align: center">
+    <button type="button" class="btn btn-warning btn-lg btn-block">Info</button>
+    <button type="button" class="btn btn-warning btn-lg btn-block">Results</button>
     </div>
   </div>
   <div class="row">
