--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,27 +13,50 @@ h1 {
 }
 
 .navbar-custom {
-  background-color: #ff0000;
-  border-color: #ff0000;
+  background-color: #ffae00;
+  border-color: #ffae00;
 }
 
 .btn-lg {
   padding: 40px 70px;
-  font-size: 30px;
-  line-height: 1.3333333;
+  font-size: 80px;
+  line-height: 0.5;
   border-radius: 50px;
   white-space: normal;
   margin-bottom: 40px;
+}
+
+.btn-lg-navbar {
+  padding: 30px 70px;
+  font-size: 43px;
+  line-height: 0.2;
+  border-radius: 20px;
+  white-space: normal;
+  margin-bottom: 2px;
+  margin-left: 10px;
 }
 
 .btn-warning {
   color: #ff0000;
   background-color: #ffae00;
   border-color: #ff0000;
-  border: 8px solid;
+  border: 10px solid;
+}
+
+.btn-warning-navbar {
+  color: #ff0000;
+  background-color: #ffae00;
+  border-color: #ff0000;
+  border: 4px solid;  
 }
 
 .btn-warning:hover {
+  color: #ffae00;
+  background-color: #ff0000;
+  border-color: #ff0000;
+}
+
+.btn-warning-navbar:hover {
   color: #ffae00;
   background-color: #ff0000;
   border-color: #ff0000;
