--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -2,22 +2,23 @@
 <html>
 <head>
   <title>Races</title> 
+  <link href="../../assets/stylesheets/bootstrap.css" rel="stylesheet">
+  <link href="../../assets/stylesheets/races.scss" rel="stylesheet">
 </head>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+<nav class="navbar navbar-custom navbar-fixed-top">
   <ul class="nav navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
+      <%= link_to "Home", root_path, class: "btn btn-warning-navbar btn-lg-navbar" %>
     </li>
     <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
+      <%= link_to "Racers", racers_path, class: "btn btn-warning-navbar btn-lg-navbar" %>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="#">Races</a>
+      <%= link_to "Races", racers_path, class: "btn btn-warning-navbar btn-lg-navbar" %>
     </li>
   </ul>
 </nav>
-<body style="padding-top: 60px">
+<body style="padding-top: 0px">
 <div class="container-fluid">
 <!--   <div class="row">
     <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["grey"] %>
