--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,20 +5,6 @@
   <link href="../../assets/stylesheets/bootstrap.css" rel="stylesheet">
   <link href="../../assets/stylesheets/welcome.scss" rel="stylesheet">
 </head>
-<!-- <nav class="navbar navbar-custom navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" <%= link_to "Home", root_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Races</a>
-    </li>
-  </ul>
-</nav> -->
 <body style="padding-top: 20px">
 <div class="container-fluid">
   <div class="row">
@@ -28,8 +14,8 @@
   </div> <!-- row -->
   <div class="row">
     <div class="col-md-8 col-md-offset-2" style="text-align: center">
-    <button type="button" class="btn btn-warning btn-lg btn-block">Info</button>
-    <button type="button" class="btn btn-warning btn-lg btn-block">Results</button>
+    <%= link_to "Info", about_path, class: "btn btn-warning btn-lg btn-block" %>
+    <%= link_to "Results", races_path, class: "btn btn-warning btn-lg btn-block" %>
     </div>
   </div>
   <div class="row">
