--- a/app/views/pages/count.html.erb
+++ b/app/views/pages/count.html.erb
@@ -12,35 +12,18 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Races', races_path %></a>
+    </li>
     <li class="nav-item active">
-      <a class="nav-link" href="#">Races</a>
+      <a class="nav-link" href="#">Racer Count</a>
     </li>
   </ul>
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-<!--   <div class="row">
-    <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["grey"] %>
-  </div> -->
   <div class="row">
-    <table class="table table-hover table-bordered">
-      <thead>
-      <tr>
-        <th>Date</th>
-        <th>Racer Count</th>
-        <th>Results</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% Race.order(:date).reverse.each do |race| %>
-        <tr>
-          <td><%= race.date %></td>
-          <td><%= race.results.count %></td>
-          <td><%= link_to 'Show', race_path(race) %></td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
+    <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["grey"] %>
   </div>
 </body>
 </html>
