--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -15,13 +15,13 @@
     <li class="nav-item active">
       <a class="nav-link" href="#">Races</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
+    </li>
   </ul>
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-<!--   <div class="row">
-    <%= column_chart Result.group(:race_id).count, min: 0, max: 22, colors: ["grey"] %>
-  </div> -->
   <div class="row">
     <table class="table table-hover table-bordered">
       <thead>
