--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -19,6 +19,16 @@
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
   </ul>
+  <form class="navbar-form navbar-left" role="search">
+    <div class="input-group">
+      <%= form_tag(races_path, :method => "get", id: "search-form") do %>
+        <%= text_field_tag :search, params[:search], placeholder: "Search races...", class: 'form-control' %>
+        <span class="input-group-btn">
+          <%= submit_tag "Search", class: "btn btn-default" %>
+        </span>
+        <% end %>
+    </div>
+  </form>
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
@@ -30,7 +40,7 @@
       </tr>
       </thead>
       <tbody>
-      <% Race.order(:date).reverse.each do |race| %>
+      <% @races.each do |race| %>
         <tr>
           <td><%= race.date %></td>
           <td><%= link_to race.results.count, race_path(race) %></td>
