--- a/app/views/pages/count.html.erb
+++ b/app/views/pages/count.html.erb
@@ -18,6 +18,9 @@
     <li class="nav-item active">
       <a class="nav-link" href="#">Racer Count</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Import', import_path %></a>
+    </li>
   </ul>
 </nav>
 <body style="padding-top: 60px">
