--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -18,6 +18,9 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Import', import_path %></a>
+    </li>
   </ul>
   <form class="navbar-form navbar-left" role="search">
     <div class="input-group">
