Fixing welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,9 +18,6 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Import', import_path %></a>
-    </li>
   </ul>
 </nav>
 <body style="padding-top: 60px">
@@ -28,9 +25,13 @@
   <div class="row">
     <div class="text-center">
     <h1>Fog City Run</h1>
-    <h2>
-    <p>A weekly running race in San Francisco, CA</p>
+    <h2><p>A weekly running race in San Francisco, CA</p></h2>
     <br>
+    <br>
+    <br>
+    <br>
+    <div class="col-md-11 col-md-offset-1" style="height:10%;">
+    <h2>
     <p class="text-left"><b>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
     <p class="text-left"><b>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
     <p class="text-left"><b>&nbsp; How do I register?</b> Registration is upon arrival. $5.00 cash. We usually don't have change.</P>
@@ -38,6 +39,8 @@
     <p class="text-left"><b>&nbsp;&nbsp;How many people come?</b> 5-20. You can view the race results <%= link_to 'here', races_path %> and on <a href=http://www.strava.com/segments/7613369>Strava.</a></P>
     <p class="text-left"><b>&nbsp;&nbsp;A locked closet is available for any extra belongings.</b></P>
     </h2>
+  </div>
+  </div>
   </div> <!-- row -->
     <div class="row">
     <nav class="navbar navbar-default navbar-fixed-bottom">
@@ -47,6 +50,5 @@
     </nav>
   </div> <!-- row -->
   </div>
-</div>
 </body>
 </html>
