Fixing sort of racer count

--- a/app/views/racers/index.html.erb
+++ b/app/views/racers/index.html.erb
@@ -41,12 +41,11 @@
       </tr>
       </thead>
       <tbody>
-      <% @racers.each do |racer| %>
+      <% Result.joins(:racer).group("racer_id").count(:racer_id).sort_by {|_key, value| value}.reverse.each do |result| %>
         <tr>
-          <td><%= racer.first_name %></td>
-          <td><%= racer.last_name %></td>
-          <td><%= link_to racer.results.count.to_s, racer_path(racer) %></td>
-        </tr>
+          <td><%= Racer.find(result[0]).first_name %></td>
+          <td><%= Racer.find(result[0]).last_name %></td>
+          <td><%= link_to result[1], racer_path(Racer.find(result[0])) %></td>
       <% end %>
       </tbody>
     </table>
