--- a/app/views/pages/count.html.erb
+++ b/app/views/pages/count.html.erb
@@ -4,7 +4,7 @@
   <title>Races</title> 
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+  <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
       <a class="nav-link" <%= link_to "Home", root_path %></a>
