--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -4,11 +4,8 @@
   <title>Racers</title>
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+  <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
   <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Back', racers_path %></a>
-    </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
     </li>
@@ -39,7 +36,7 @@
   <tbody>
   <% @racer.results.includes(:race).order("races.date DESC").each do |result| %>
     <tr>
-      <td><%= Race.find(result.race_id).date %></td>
+      <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
       <td><%= result.time %></td>
     </tr>
   <% end %>
