--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -4,7 +4,7 @@
   <title>Races</title> 
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+  <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
       <a class="nav-link" <%= link_to "Home", root_path %></a>
@@ -42,7 +42,7 @@
       <tbody>
       <% Result.joins(:race).group("race_id").count(:race_id).sort_by { |k| k[0]}.reverse.each do |result| %>
         <tr>
-          <td><%= Race.find(result[0]).date %></td>
+          <td><%= link_to Race.find(result[0]).date, race_path(Race.find(result[0])) %></td>
           <td><%= result[1] %></td>
         </tr>
       <% end %>
