--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -4,11 +4,8 @@
   <title>Racers</title>
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+  <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
   <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" <%= link_to 'Back', races_path %></a>
-    </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
     </li>
@@ -28,7 +25,6 @@
     <th>Rank</th>
     <th>Bib</th>
     <th>Racer</th>
-    <th>Racer Results</th>
     <th>Time</th>
   </tr>
   </thead>
@@ -37,8 +33,7 @@
     <tr>
       <td><%= result.rank %></td>
       <td><%= result.bib %></td>
-      <td><%= result.racer.first_name %>  <%= result.racer.last_name %></td>
-      <td><%= link_to 'Link', racer_path(result.racer) %></td>
+      <td><%= link_to result.racer.first_name + ' ' + result.racer.last_name, racer_path(result.racer)%> </td>
       <td><%= result.time %></td>
     </tr>
   <% end %>
