--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
   <title>Races</title> 
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <a class="navbar-brand" href="#"><b>Fog City Run</b></a>
+  <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
   <ul class="nav navbar-nav">
     <li class="nav-item active">
       <a class="nav-link" <%= link_to "Home", root_path %></a>
@@ -13,7 +13,7 @@
       <a class="nav-link" <%= link_to 'Racers', racers_path %></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Races</a>
+      <a class="nav-link" <%= link_to 'Races', races_path %></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
