--- a/app/views/pages/records.html.erb
+++ b/app/views/pages/records.html.erb
@@ -18,6 +18,9 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
+    <li class="nav-item active">
+      <a class="nav-link" <%= link_to 'Records', records_path %></a>
+    </li>
   </ul>
 </nav>
 <body style="padding-top: 60px">
@@ -25,11 +28,17 @@
     <table class="table table-hover table-bordered">
       <thead>
       <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Time</th>
+        <th>Racer</th>
+        <th>PR Time</th>
       </tr>
       </thead>
+      <tbody>
+      <% Result.group(:racer_id).pluck('racer_id', 'min(time)').sort_by {|_key, value| value}.each do |result| %>
+        <tr>
+          <td><%= link_to Racer.find(result[0]).first_name + " " + Racer.find(result[0]).last_name, racer_path(Racer.find(result[0])) %></td>
+          <td><%= result[1] %>
+      <% end %>
+      </tbody>
     </table>
   </div>
 </body>
