--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -15,6 +15,9 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
+      <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Records', records_path %></a>
+    </li>
   </ul>
 </nav>
 <body style="padding-top: 40px">
