--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,6 +18,9 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Racer Count', count_path %></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Records', records_path %></a>
+    </li>
   </ul>
 </nav>
 <body style="padding-top: 60px">
