Added a rank and bib bar plot to the racer view + Facebook link on welcome view

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// Custom settings for the navbar-right logos.
+
+.navbar-right {
+  margin-right: 20px;
+  margin-left: 10px;
+  padding: 0px;
+}
