--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Races</title> 
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <nav class="navbar navbar-default navbar-fixed-top">
   <a class="navbar-brand" href="<%= root_path %>"><b>Fog City Run</b> </a>
@@ -22,6 +23,7 @@
       <a class="nav-link" <%= link_to 'Records', records_path %></a>
     </li>
   </ul>
+  </ul>
 </nav>
 <body style="padding-top: 60px">
 <div class="container-fluid">
@@ -33,7 +35,7 @@
     <br>
     <br>
     <br>
-    <div class="col-md-11 col-md-offset-1" style="height:10%;">
+    <div class="col-md-10 col-md-offset-2" style="height:10%;">
     <h3>
     <p class="text-left"><b>&nbsp; When:</b> The race is every Wednesday @ 6:30pm. Rain or shine. Best to arrive at 6:15pm.</P>
     <p class="text-left"><b>&nbsp; Where:</b> We leave from <a href="http://www.thebluelightsf.com/"><i>The Blue Light</i></a> - <a href="http://maps.apple.com/?q=1979 Union St, San Francisco, CA 94123">1979 Union St, San Francisco, CA 94123.</a></P>
@@ -45,6 +47,14 @@
   </div>
   </div>
   </div> <!-- row -->
+  <br>
+  <br>
+  <br>
+  <div class="row">
+    <div class="text-center">
+      <a href="https://www.facebook.com/FogCityRun/" class="icon-block"> <i class="fa fa-facebook fa-4x"></i></a>
+    </div>
+  </div>
     <div class="row">
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="col-md-12 " style="height:10%;">
