Small database.yaml change and making welcome panel transparent

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -20,3 +20,11 @@ body.welcome {
 	-o-background-size: cover;
 	background-size: cover;
 }
+
+h1 {
+	font-size: 45px;
+}
+
+.panel-transparent {
+    background: rgba(240, 240, 240, 0.8)!important;
+}
