--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,9 +32,9 @@
     <br>
     <br>
     <br>
-    <div class="col-md-8 col-md-offset-2 panel panel-default" style="height:50%;">
+    <div class="col-md-8 col-md-offset-2 panel panel-default panel-transparent" style="height:50%;">
     <div class="text-center">
-    <h1>Fog City Run</h1>
+    <h1><b>Fog City Run</b></h1>
     <p>A weekly running race in San Francisco, CA</p>
     <br>
     </div>
