--- a/app/views/pages/count.html.erb
+++ b/app/views/pages/count.html.erb
@@ -21,6 +21,9 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Records', records_path %></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
+    </li>
   </ul>
 </nav>
 <body style="padding-top: 60px">
