--- a/app/views/racers/index.html.erb
+++ b/app/views/racers/index.html.erb
@@ -21,6 +21,9 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Records', records_path %></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
+    </li>
   </ul>
   <form class="navbar-form navbar-left" role="search">
     <div class="input-group">
