--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -18,6 +18,9 @@
       <li class="nav-item">
       <a class="nav-link" <%= link_to 'Records', records_path %></a>
     </li>
+    <li class="nav-item active">
+      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
+    </li>
   </ul>
 </nav>
 <body style="padding-top: 40px">
@@ -27,6 +30,7 @@
       <h3> <%= @racer.first_name %> <%= @racer.last_name %></h3>
       <h4><i>Races: <%= @racer.results.count %></i></h4>
       <h4><i>PR: <%= @racer.results.order(:time).first.time%></i></h4>
+      <h4><i>Loop-Beer Runs: <%= @racer.results.where("group_name = ?", "Loop-Beer").count %></i></h4>
     </div>
   </div>
   <div class="row">
@@ -37,22 +41,48 @@
       <%= bar_chart Result.where(racer_id: @racer.id).group(:bib).count, xtitle: "Bib #{}", ytitle: "Count", title: "Finish Place Distribution", width: "300px", height: "250px", colors: ["red"]%>
     </div>
   </div>
-  <table class="table table-hover table-bordered">
-  <thead>
-  <tr>
-    <th>Date</th>
-    <th>Time</th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @racer.results.includes(:race).order("races.date DESC").each do |result| %>
+  <div class="row">
+    <div class="col-md-3">
+    <h4>Races</h4>
+    <br>  
+    <table class="table table-hover table-bordered">
+    <thead>
     <tr>
-      <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
-      <td><%= result.time %></td>
+      <th>Date</th>
+      <th>Time</th>
     </tr>
-  <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+    <% @racer.results.includes(:race).order("races.date DESC").each do |result| %>
+      <tr>
+        <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
+        <td><%= result.time %></td>
+      </tr>
+    <% end %>
+    </tbody>
+    </table>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <h4>Loop-Beer Runs</h4>
+    <br>
+      <table class="table table-hover table-bordered">
+      <thead>
+      <tr>
+        <th>Date</th>
+        <th>Time</th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @racer.results.where("group_name = ?", "Loop-Beer").includes(:race).order("races.date DESC").each do |result| %>
+        <tr>
+          <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
+          <td><%= result.time %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    </div>
 </div>
 </body>
 </html>
