--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,6 +15,9 @@
     </li>
     <li class="nav-item active">
       <a class="nav-link" href="#">Races</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
     </li>
   </ul>
 </nav>
