--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,6 +22,9 @@
     <li class="nav-item">
       <a class="nav-link" <%= link_to 'Records', records_path %></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" <%= link_to 'Loop-Beer-Loop', loop_beer_path %></a>
+    </li>
   </ul>
   </ul>
 </nav>
